--- a/static/index.html
+++ b/static/index.html
@@ -39,23 +39,23 @@
                                 Last 12 Hrs
                             </button>
                             <div class="dropdown-menu" aria-labelledby="viewSinceButton">
-                                <a data-view-since="6hr" class="dropdown-item" href="#">Last 6 Hr</a>
-                                <a data-view-since="12hr" class="dropdown-item active" href="#">Last 12 Hr</a>
-                                <a data-view-since="24hr" class="dropdown-item" href="#">Last 24 Hr</a>
-                                <a data-view-since="2days" class="dropdown-item" href="#">Last 2 Days</a>
-                                <a data-view-since="lastweek" class="dropdown-item" href="#">Last Week</a>
-                                <a data-view-since="lastmonth" class="dropdown-item" href="#">Last Month</a>
+                                <a data-view-since="6" class="dropdown-item" href="#">Last 6 Hr</a>
+                                <a data-view-since="12" class="dropdown-item active" href="#">Last 12 Hr</a>
+                                <a data-view-since="24" class="dropdown-item" href="#">Last 24 Hr</a>
+                                <a data-view-since="48" class="dropdown-item" href="#">Last 2 Days</a>
+                                <a data-view-since="168" class="dropdown-item" href="#">Last Week</a>
+                                <a data-view-since="672" class="dropdown-item" href="#">Last Month</a>
                             </div>
                         </div>
                         <div class="dropdown mr-2">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="groupByInterval"
                                 data-toggle="dropdown" aria-haspopup="true" style="width:9.5rem" aria-expanded="false">
-                                Group By 1 HR
+                                Group By Default
                             </button>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="groupByInterval">
                                 <div class="dropdown-item" style="width:20rem;">
-                                    <label id="groupByIntervalLabel">Group By 1 HR</label><br>
-                                    <input type="range" class="custom-range" min="0" max="5" step="1"
+                                    <label id="groupByIntervalLabel">Group By Default</label><br>
+                                    <input type="range" class="custom-range" min="0" max="6" value="0" step="1"
                                         id="groupByIntervalRange" style="pointer-events: auto;">
                                 </div>
                             </div>
@@ -65,7 +65,8 @@
                     </div>
                 </div>
                 <canvas id="myChart" class="my-4 w-100" width="900" height="380"></canvas>
-                <h2>Section title</h2>
+                <h2>Archived Data
+                </h2>
                 <div class="table-responsive">
                     <table class="table table-striped table-sm">
                         <thead>
@@ -76,7 +77,7 @@
                                 <th>Download</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="archivedTable">
                         </tbody>
                     </table>
                 </div>
@@ -120,6 +121,8 @@
     <script type="text/javascript">
         var active_device_id;
         var active_since = 3600 * 12;
+        var interval_by = 1;
+        var device_list;
 
         var ctx = document.getElementById('myChart');
         var chart = new Chart(ctx, {
@@ -171,24 +174,23 @@
                     $('[data-device-id]:first').addClass("active");
 
                     $('[data-device-id]').click(function (event) {
-                        console.log(event);
                         $("[data-device-id]").removeClass("active");
                         var id_selected = $(event.target).attr("data-device-id");
                         $(event.target).addClass("active");
 
                         active_device_id = parseInt(id_selected);
-                        update(active_device_id, active_since);
+                        console.log(interval_by)
+                        update(active_device_id, active_since, interval_by);
                     });
 
-
                     active_device_id = device_list[0].id;
-                    update(active_device_id, active_since);
+                    update(active_device_id, active_since, interval_by);
                 })
             }
         )
 
-        function getStats(device_id, view_since, cbk) {
-            fetch('/viewSince?view_since=' + view_since + '&device_id=' + device_id)
+        function getStats(device_id, view_since, interval_by, cbk) {
+            fetch('/viewSince?view_since=' + view_since + '&device_id=' + device_id + '&interval_by=' + interval_by)
                 .then(
                     function (response) {
                         if (response.status !== 200) {
@@ -197,7 +199,9 @@
                             return;
                         }
                         response.json().then(function (data) {
-                            cbk(data["stats"]);
+                            var stats_temp = data["stats"]
+                            cbk(stats_temp);
+                            needToArchive();
                         });
                     }
                 )
@@ -207,8 +211,8 @@
         }
 
 
-        function update(device_id, view_since) {
-            getStats(device_id, view_since, function (stats) {
+        function update(device_id, view_since, interval_by) {
+            getStats(device_id, view_since, interval_by, function (stats) {
                 renderDeviceStats(stats);
             });
         }
@@ -259,42 +263,110 @@
             var temp = $(event.target).attr("data-view-since");
             $(event.target).addClass("active");
 
+            if (temp == 6 || temp == 12) {
+                $('#groupByIntervalRange').attr('min', '0');
+                $('#groupByIntervalRange').attr('max', '3');
+                $('#groupByIntervalRange').attr('value', '0');
+            } else if (temp == 24) {
+                $('#groupByIntervalRange').attr('min', '1');
+                $('#groupByIntervalRange').attr('max', '3');
+                $('#groupByIntervalRange').attr('value', '1');
+            } else if (temp == 48) {
+                $('#groupByIntervalRange').attr('min', '1');
+                $('#groupByIntervalRange').attr('max', '4');
+                $('#groupByIntervalRange').attr('value', '1');
+            } else if (temp == 168) {
+                $('#groupByIntervalRange').attr('min', '2');
+                $('#groupByIntervalRange').attr('max', '4');
+                $('#groupByIntervalRange').attr('value', '2');
+            } else if (temp == 672) {
+                $('#groupByIntervalRange').attr('min', '2');
+                $('#groupByIntervalRange').attr('max', '6');
+                $('#groupByIntervalRange').attr('value', '2');
+            }
+
             $("#viewSinceButton").text($(event.target).text());
             active_since = parseInt(temp) * 3600;
-            update(active_device_id, active_since);
+            update(active_device_id, active_since, interval_by);
         });
 
         $('#groupByIntervalRange').change(function (event) {
             var temp = $(event.target).val();
             switch (temp) {
                 case "0":
-                    $('#groupByInterval').text("Group By 30 Min")
-                    $('#groupByIntervalLabel').text("Group By 30 Min")
+                    $('#groupByInterval').text("Group By Default");
+                    $('#groupByIntervalLabel').text("Group By Default");
+                    interval_by = 1 * 60;
                     break;
                 case "1":
-                    $('#groupByInterval').text("Group By 1 Hr")
-                    $('#groupByIntervalLabel').text("Group By 1 Hr")
+                    $('#groupByInterval').text("Group By 15 Min");
+                    $('#groupByIntervalLabel').text("Group By 15 Min");
+                    interval_by = 15 * 60;
                     break;
                 case "2":
-                    $('#groupByInterval').text("Group By 6 Hr")
-                    $('#groupByIntervalLabel').text("Group By 6 Hr")
+                    $('#groupByInterval').text("Group By 30 Min");
+                    $('#groupByIntervalLabel').text("Group By 30 Min");
+                    interval_by = 30 * 60;
                     break;
                 case "3":
-                    $('#groupByInterval').text("Group By 12 Hr")
-                    $('#groupByIntervalLabel').text("Group By 12 Hr")
+                    $('#groupByInterval').text("Group By 1 Hr");
+                    $('#groupByIntervalLabel').text("Group By 1 Hr");
+                    interval_by = 60 * 60;
                     break;
                 case "4":
-                    $('#groupByInterval').text("Group By 1 Day")
-                    $('#groupByIntervalLabel').text("Group By 1 Day")
+                    $('#groupByInterval').text("Group By 6 Hr");
+                    $('#groupByIntervalLabel').text("Group By 6 Hr");
+                    interval_by = 360 * 60;
                     break;
                 case "5":
-                    $('#groupByInterval').text("Group By 5 Day")
-                    $('#groupByIntervalLabel').text("Group By 30 Min")
+                    $('#groupByInterval').text("Group By 12 Hr");
+                    $('#groupByIntervalLabel').text("Group By 12 Hr");
+                    interval_by = 720 * 60;
+                    break;
+                case "6":
+                    $('#groupByInterval').text("Group By 1 Day");
+                    $('#groupByIntervalLabel').text("Group By 1 Day");
+                    interval_by = 720 * 2 * 60;
                     break;
                 default:
                     break;
             }
+            update(active_device_id, active_since, interval_by);
         })
+
+        function needToArchive() {
+            var archived_table = $('#archivedTable');
+
+            fetch('/needArchive?device_id=' + active_device_id).then(
+                function (response) {
+                    response.json().then(function (data) {
+                        var first_time = new Date(parseFloat(data)*1000)
+                        var now = new Date();
+                        var month_diff = now.getMonth() - first_time.getMonth();
+                        var day_diff = now.getDay() - first_time.getDay();
+                        
+                        if (month_diff > 0) {
+                            /*for (var i = 0; i < month_diff; i++) {
+                                var li = $('</tr>').appendTo(arvhied_table);
+                                var td_time = $('</td>').text(new Date(stats_temp[0].timestamp))
+                                var td_mac = $('</td>').text(device_list[stats_temp[0].id])
+                                var td_upload = $('</td>').text(device_list[stats_temp[0].id])
+                                var td_download = $('</td>').text(device_list[stats_temp[0].id])
+                            }*/
+                        } else if (day_diff > 0) {
+                            for (var i = 0; i < day_diff; i++) {
+                                var li = $('<tr/>').appendTo(archived_table);
+                                first_time.setDate(first_time.getDate() + i)
+                                var td_time = $('<td/>').html(first_time.toString().substring(4,15)).appendTo(li)
+                                var td_mac = $('<td/>').html(device_list[active_device_id]).appendTo(li)
+                                //var td_upload = $('</td>').text(device_list[stats_temp[0].id]).appendTo(li)
+                                //var td_download = $('</td>').text(device_list[stats_temp[0].id]).appendTo(li)
+                            }
+                        }
+                    })
+                }
+            );
+        }
 
     </script>
 </body>
